manifests/producao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
  namespace: oficina-producao
spec:
  selector:
    app: oficina-app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
